# data-contracts

./: .coverage  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: notebook.ipynb  trade_pipeline.py
src/data_contracts/: __init__.py  cli.py  contracts.py  diff.py  notifications.py  registry.py  validation.py
tests/: conftest.py  test_contracts.py  test_diff.py  test_validation.py
