[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-contracts"
version = "1.0.0"
description = "Schema evolution framework with breaking change detection for data pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
data-contracts = "data_contracts.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=data_contracts --cov-report=term-missing"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
